RESOLVED FIXED274776
REGRESSION(279376@main) [WPE] Build broken without WPE_PLATFORM guard
https://bugs.webkit.org/show_bug.cgi?id=274776
Summary REGRESSION(279376@main) [WPE] Build broken without WPE_PLATFORM guard
Lauro Moura
Reported 2024-05-28 05:30:36 PDT
I accidentally left one line using the new API, where it should have been using the old one. Patch incoming.
Attachments
Lauro Moura
Comment 1 2024-05-28 06:04:32 PDT
EWS
Comment 2 2024-05-28 06:17:16 PDT
Committed 279379@main (f409e9ff48c8): <https://commits.webkit.org/279379@main> Reviewed commits have been landed. Closing PR #29172 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.