REGRESSION(279376@main) [WPE] Build broken without WPE_PLATFORM guard https://bugs.webkit.org/show_bug.cgi?id=274776

Unreviewed build fix.

Use the right API call.

* Source/WebKit/UIProcess/Automation/libwpe/WebAutomationSessionWPE.cpp:
(WebKit::WebAutomationSession::platformSimulateKeySequence):

Canonical link: https://commits.webkit.org/279379@main